--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "firebase": "^11.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
     "tailwind": "^4.0.0",
     "three": "^0.178.0",
