--- a/front/package.json
+++ b/front/package.json
@@ -8,11 +8,15 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "firebase": "^11.10.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "recharts": "^3.0.2",
     "tailwind": "^4.0.0",
     "three": "^0.178.0",
     "web-vitals": "^2.1.4"
